--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -9,6 +9,11 @@ on:
       - "v*.*.*"
       - "v*.*"
 
+# THIS IS THE FIX:
+# This grants the workflow permission to write to your releases.
+permissions:
+  contents: write
+
 jobs:
   build:
     strategy:
@@ -42,28 +47,22 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          # This is correct. It builds each platform separately.
           combine: true
           target: ${{ matrix.config.target }}
 
   package:
     name: Package Builds
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: ['build']
 
     steps:
-      # THIS IS THE CRUCIAL STEP WE WERE MISSING.
-      # This action automatically downloads all the separate build artifacts
-      # and combines their .geode files into one directory.
       - name: Combine Builds
         uses: geode-sdk/build-geode-mod/combine@main
         id: package
 
-      # This is the uploader. It takes the output from the "Combine Builds" step
-      # and uploads it to the release page.
       - name: Upload to Release
         uses: softprops/action-gh-release@v2
         with:
-          # This correctly points to the output directory from the 'package' step
           files: ${{ steps.package.outputs.build-output }}/*.geode
           fail_on_unmatched_files: true
